# vibescore

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  demo.cast  demo.tape  pyproject.toml
.github/workflows/: ci.yml  scorecard.yml
src/vibe_check/: __init__.py  cli.py  deps.py  quality.py  report.py  scanner.py  scoring.py  security.py
src/vibescore/: __init__.py  __main__.py  _types.py  actions.py  ast_diff.py  bayesian.py  cli.py  dashboard.py  discovery.py  quality_go.py  quality_js.py  quality_rs.py  report.py  scanner.py  security.py  testing.py  watch.py
tests/: test_actions.py  test_ast_diff.py  test_bayesian.py  test_cli.py  test_dashboard.py  test_deps.py  test_discovery.py  test_edge_cases.py  test_quality.py  test_quality_go.py  test_quality_js.py  test_quality_rs.py  test_report.py  test_scanner.py  test_scoring.py  test_security.py  test_testing_module.py  test_watch.py
vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json  vibescore-0.1.0.vsix  vibescore-0.1.1.vsix
vscode-extension/src/: extension.ts
